Fix checkbox and radio button alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,23 @@
  *= require_tree ./../../../vendor/assets/css
  *= require_tree .
  */
+
+.quest-content {
+  display: inline-block;
+  margin: 20px 0 5px 0;
+
+}
+
+input[type="checkbox"]{
+  display: inline-block;
+  margin: 0 10px 5px 0;
+}
+
+
+input[type="radio"].choice-set {
+  margin: 3px 25px 6px -40px;
+}
+
+.choice-list {
+  margin: 0 0 0 39px;
+}
